[workspace]
members = ["bins/*"]
resolver = "3"

[workspace.dependencies]
clap = { features = ["derive"], version = "4.5" }
gix = { default-features = false, features = ["basic"], version = "0.79" }
serde = { features = ["derive"], version = "1.0" }
serde_json = "1.0"
shellexpand = "3.1"
tempdir = "0.3"
thiserror = "2.0"
